# mull

./: CMakeLists.txt
.github/workflows/: ci.yml
actions/build-and-test-mull/: action.yml
actions/install-dependencies/: action.yml
actions/install-llvm/: action.yml
actions/publish-package/: action.yml
actions/run-ci-task/: action.yml
actions/run-integration-tests/: action.yml
cmake/: llvm.cmake
include/mull/ClangHeaders/: ClangHeaders.h
include/mull/JunkDetection/CXX/: ASTStorage.h
include/mull/Mutators/CXX/: BitwiseMutators.h
infrastructure/differential-testing/: main.py  mull.yml
infrastructure/helpers/: integration-tests.yaml  variables.yaml
lib/: CMakeLists.txt  Driver.cpp  MutationPoint.cpp
lib/ClangHeaders/: CMakeLists.txt  ClangHeaders.cpp
lib/JunkDetection/CXX/: ASTStorage.cpp
lib/Mutators/CXX/: ArithmeticMutators.cpp  BitwiseMutators.cpp  LogicalAndToOr.cpp  LogicalOrToAnd.cpp
tests-lit/: CMakeLists.txt
tests-lit/tests/junk_detection/06_clang_headers/: sample.cpp
tools/mull-cxx/: mull-cxx.cpp
tools/mull-cxx-ir-frontend/: mull-cxx-ir-frontend.cpp
